src/test/error/flow.lns
{
   fn func1(): __ { // error
   }
}

{
   fn func(val:int):__ {  // error
      if val == 1 {  
         return;  // error
      }  
   }  
}

{
   fn func(val:int):__ {
      error( "" );
   }  
}

{
   fn func(val:int):__ { // error
      if val == 1 {
         error( "" );
      }
   }  
}

{
   fn func(val:int):__ {
      if val == 1 {
         error( "" );
      }
      else {
         error( "" );
      }
   }  
}

{
   fn func(val:int):__ {
      if val == 1 {
         error( "" );
      }
      error( "" );
   }  
}

{
   fn func(val:int):__ {
      if val == 1 {
         return;  // error
      }
      error( "" );
   }  
}

{
   fn func(val:int):__ {  // error
      switch val {
         case 1 {
            error( "" );
         }
      }
   }  
}

{
   fn func(val:int):__ {
      switch val {
         case 1 {
            error( "" );
         }
         default {
            error( "" );
         }
      }
   }  
}

{
   if 1 { // error
   }
   if 1.0 { // error
   }
   if "" { // error
   }
   if [] { // error
   }
   if {} { // error
   }
   if true {
   }
   let val:int! = 1;
   if val {
   }
}
